# libvoicetext-api

./: Cargo.toml  README.md
.github/: CODEOWNERS  renovate.json
.github/workflows/: do-not-merge.yml
src/: lib.rs
tests/: integration_test.rs
