[package]
name = "libvoicetext-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "=0.11.18" }
serde = { version = "=1.0.174", features = ["derive"] }
serde_urlencoded = "=0.7.1"

[dev-dependencies]
tokio = {version = "=1.29.1", features = ["macros"]}
