[package]
name = "libvoicetext-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
reqwest = { version = "0.11.20" }
serde = { version = "1.0.188", features = ["derive"] }
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = {version = "=1.37.0", features = ["macros"]}
